renames src/cuda to src/gpu

--- a/Makefile.in
+++ b/Makefile.in
@@ -132,11 +132,14 @@ PART_LIBS  += $(PATOH_LIBS)
 
 #######################################
 ####
-#### CUDA
+#### GPU
 #### with configure: ./configure --with-cuda=cuda5 CUDA_FLAGS=.. CUDA_LIB=.. CUDA_INC=.. MPI_INC=.. ..
 ####
 #######################################
 
+##
+## CUDA
+##
 @COND_CUDA_TRUE@CUDA = yes
 @COND_CUDA_FALSE@CUDA = no
 
@@ -171,6 +174,7 @@ PART_LIBS  += $(PATOH_LIBS)
 CUDA_FLAGS = @CUDA_FLAGS@
 CUDA_INC = @CUDA_CPPFLAGS@ -I${SETUP}
 CUDA_LINK = @CUDA_LDFLAGS@ @CUDA_LIBS@ -lstdc++
+CUDA_DEBUG = --cudart=shared
 
 @COND_CUDA_TRUE@NVCC = nvcc
 @COND_CUDA_FALSE@NVCC = @CC@
@@ -219,8 +223,8 @@ GENCODE_80 = -gencode=arch=compute_80,code=\"sm_80,compute_80\"
 @COND_CUDA_TRUE@@COND_CUDA_PLUS_FALSE@GENCODE = $(GENCODE_20)
 
 # CUDA flags and linking
-@COND_CUDA_TRUE@NVCC_FLAGS_BASE = $(CUDA_FLAGS) $(CUDA_INC) $(MPI_INCLUDES) $(COND_MPI_CPPFLAGS)
-@COND_CUDA_TRUE@@COND_CUDA_PLUS_TRUE@NVCC_FLAGS = $(NVCC_FLAGS_BASE) -dc -DCUDA $(GENCODE)
+@COND_CUDA_TRUE@NVCC_FLAGS_BASE = $(CUDA_FLAGS) $(CUDA_INC) $(CUDA_DEBUG) $(MPI_INCLUDES) $(COND_MPI_CPPFLAGS)
+@COND_CUDA_TRUE@@COND_CUDA_PLUS_TRUE@NVCC_FLAGS = $(NVCC_FLAGS_BASE) -DCUDA -dc $(GENCODE)
 @COND_CUDA_TRUE@@COND_CUDA_PLUS_FALSE@NVCC_FLAGS = $(NVCC_FLAGS_BASE) -DCUDA -DUSE_OLDER_CUDA4_GPU $(GENCODE)
 
 @COND_CUDA_TRUE@@COND_CUDA_PLUS_TRUE@NVCCLINK_BASE = $(NVCC) $(CUDA_FLAGS) $(CUDA_INC) $(MPI_INCLUDES) $(COND_MPI_CPPFLAGS) -DCUDA
@@ -279,11 +283,14 @@ endif
 @COND_ADIOS_TRUE@ADIOS = yes
 @COND_ADIOS_FALSE@ADIOS = no
 
-ADIOS_INC = @ADIOS_FCFLAGS@
-ADIOS_LINK = @ADIOS_LIBS@
+@COND_ADIOS_TRUE@ADIOS_DEF = $(FC_DEFINE)USE_ADIOS
+@COND_ADIOS_FALSE@ADIOS_DEF =
 
-FCFLAGS_f90 += $(ADIOS_INC)
-MPILIBS += $(ADIOS_LINK)
+@COND_ADIOS_TRUE@ADIOS_INC = @ADIOS_FCFLAGS@ $(ADIOS_DEF)
+@COND_ADIOS_TRUE@ADIOS_LINK = @ADIOS_LIBS@
+
+@COND_ADIOS_TRUE@FCFLAGS_f90 += $(ADIOS_INC)
+@COND_ADIOS_TRUE@MPILIBS += $(ADIOS_LINK)
 
 #######################################
 ####
@@ -331,9 +338,9 @@ OUTPUT = $B/OUTPUT_FILES
 SUBDIRS = \
 	auxiliaries \
 	check_mesh_quality \
-	cuda \
 	decompose_mesh \
 	generate_databases \
+	gpu \
 	meshfem3D \
 	shared \
 	specfem3D \
