--- a/src/gpu/Makefile
+++ b/src/gpu/Makefile
@@ -25,7 +25,7 @@
 #
 #=====================================================================
 
-DIR = cuda
+DIR = gpu
 
 # The rest of this file is generic
 #######################################
