updates compilation for cuda/hip code

--- a/Makefile.in
+++ b/Makefile.in
@@ -263,7 +263,7 @@ GENCODE_AMD_MI100 = --amdgpu-target=gfx908
 @COND_HIP_TRUE@@COND_HIP_PLATFORM_AMD_TRUE@HIP_CFLAG_ENDING = -x hip
 # NVIDIA default Tesla
 @COND_HIP_TRUE@@COND_HIP_PLATFORM_NVIDIA_TRUE@GENCODE_HIP = $(GENCODE_30)
-@COND_HIP_TRUE@@COND_HIP_PLATFORM_AMD_TRUE@HIP_CFLAG_ENDING = -x cu
+@COND_HIP_TRUE@@COND_HIP_PLATFORM_NVIDIA_TRUE@HIP_CFLAG_ENDING =      # no need for ending
 
 # specific targets
 @COND_HIP_TRUE@@COND_HIP_MI8_TRUE@GENCODE_HIP = $(GENCODE_AMD_MI8)    # --with-hip=MI8 ..
